fix header nav spacing

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -8,6 +8,11 @@
 |
 */
 
+#header {
+  padding: 20px !important;
+  border-bottom: 1px solid $neutral-20;
+}
+
 #wpadminbar {
   background-color: $color-black-mineshaft-dark;
 }
